refactor: Migrate to Java 24, use virtual threads for blocking tasks.
Signed-off-by: Michael J. Simons <michael@simons.ac>